<resources>
    <string name="app_name">E党建</string>
    <string name="e_party">智慧党建</string>
    <string name="mine">我的</string>
    <string name="statistics">统计</string>
    <string name="archive">归档</string>
    <string name="organization">组织</string>
    <string name="meeting">会议</string>
    <string name="task">任务</string>
    <string name="login">登录</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="login_password">登录密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="flow_member_register">未注册?请注册</string>
    <string name="authentication">身份验证</string>
    <string name="your_name">您的姓名：</string>
    <string name="authentication2">身份证号：</string>
    <string name="phone2">手机号码：</string>
    <string name="input_authentication">请输入身份证号</string>
    <string name="input_your_name">请输入您的姓名</string>
    <string name="next">下一步</string>
    <string name="reset_password">重置密码</string>
    <string name="input_password">请输入登录密码</string>
    <string name="login_password2">登录密码：</string>
    <string name="query_password2">确认密码：</string>
    <string name="input_query_password">请确认登录密码</string>
    <string name="query">确定</string>
    <string name="register">注册</string>
    <string name="title">标题</string>
    <string name="flow_member">流动党员</string>
    <string name="name">姓名</string>
    <string name="phone">手机号码</string>
    <string name="operate">操作</string>
    <string name="previous_page">上一页</string>
    <string name="next_page">下一页</string>
    <string name="delete">删除</string>
    <string name="task_title">任务标题</string>
    <string name="task_hold">任务开展</string>
    <string name="start_time2">开始时间：</string>
    <string name="end_time2">截止时间：</string>
    <string name="task_info">任务信息</string>
    <string name="attachment2">附件：</string>
    <string name="look">查看</string>
    <string name="content2">内容：</string>
    <string name="detail">详情</string>
    <string name="submit_situation">提交情况</string>
    <string name="plan2">计划：</string>
    <string name="submit">提交</string>
    <string name="report2">报告：</string>
    <string name="add_task">任务信息填写</string>
    <string name="task_title2">任务标题：</string>
    <string name="input_task_title">请输入任务标题</string>
    <string name="choose">请选择</string>
    <string name="individual2">个人：</string>
    <string name="organization2">组织：</string>
    <string name="choose_file">选择文件</string>
    <string name="issue">下达</string>
    <string name="add_plan">计划信息填写</string>
    <string name="place2">执行地点：</string>
    <string name="input">请输入</string>
    <string name="add_report">报告信息填写</string>
    <string name="plan_hold">计划开展</string>
    <string name="plan_info">计划信息</string>
    <string name="sign_in_by_qrcode">扫二维码签到</string>
    <string name="upload_record">上传记录</string>
    <string name="check_record">查看记录</string>
    <string name="comment">评论</string>
    <string name="video_monitor">视频监控</string>
    <string name="want_to_comment">我来评两句</string>
    <string name="publish">发表</string>
    <string name="meeting_title">会议标题</string>
    <string name="meeting_sign_in">会议签到</string>
    <string name="meeting_hold">会议开展</string>
    <string name="meeting_info">会议信息</string>
    <string name="present_count2">应到人数：</string>
    <string name="username">姓名</string>
    <string name="meeting_statistics">会议统计</string>
    <string name="individual_statistics">个人统计</string>
    <string name="organization_statistics">组织统计</string>
    <string name="task_statistics">任务统计</string>
    <string name="year">年份</string>
    <string name="month">月份</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="participate_state">参与情况</string>
    <string name="meeting_time">会议时间</string>
    <string name="sign_in_state">签到情况</string>
    <string name="task_list">任务列表</string>
    <string name="issue_time">下达时间</string>
    <string name="issue_task">下达任务</string>
    <string name="check_situation">审核情况</string>
    <string name="check">审核</string>
    <string name="report">报告</string>
    <string name="plan">计划</string>
    <string name="check_suggestion2">批改建议：</string>
    <string name="plan_content2">计划内容：</string>
    <string name="delete_and_resubmit">删除该计划并重新提交</string>
    <string name="pass_check">通过审核</string>
    <string name="submit_time2">提交时间：</string>
    <string name="unpass">不通过</string>
    <string name="plan_list">计划列表</string>
    <string name="picture">图片</string>
    <string name="video">视频</string>
    <string name="content">内容</string>
    <string name="report_info">报告信息</string>
    <string name="report_content2">报告内容：</string>
    <string name="report_list">报告列表</string>
    <string name="search">搜索</string>
    <string name="record_info">记录信息填写</string>
    <string name="base_info">基础资料</string>
    <string name="name2">姓名：</string>
    <string name="identity2">身份：</string>
    <string name="organization3">所在组织：</string>
    <string name="organization_info">组织信息</string>
    <string name="organization_member">组织成员</string>
    <string name="setting">设置</string>
    <string name="update_password">修改密码</string>
    <string name="cache_size2">缓存大小：</string>
    <string name="clean">清理</string>
    <string name="update">修改</string>
    <string name="logout">退出登录</string>
    <string name="record_info2">记录信息</string>
    <string name="sign_in_start_time2">签到开始时间：</string>
    <string name="sign_in_end_time2">签到截止时间：</string>
    <string name="meeting_start_time2">会议开始时间：</string>
    <string name="meeting_end_time2">会议结束时间：</string>
    <string name="participant2">参与人员：</string>
    <string name="meeting_content">会议内容</string>
    <string name="add_meeting">会议信息填写</string>
    <string name="member_list">成员列表</string>
    <string name="add_member">添加成员</string>
    <string name="secretary">书记</string>
    <string name="flow_administrator">流动党员管理员</string>
    <string name="public_administrator">管理员</string>
    <string name="public_member">普通党员</string>
    <string name="input_name">请输入姓名</string>
    <string name="click_to_choose_identity">点击选择身份</string>
    <string name="level_statistics">等级统计</string>
    <string name="level">等级</string>
    <string name="choose_organization">选择组织</string>
    <string name="has_selected">查看已选择</string>
    <string name="choose_member">选择成员</string>
    <string name="choose1">选择</string>
    <string name="area2">所在地区：</string>
    <string name="detail_address2">详细地址：</string>
    <string name="input_detail_address">请输入详细地址</string>
    <string name="meeting_address">会议地址：</string>
    <string name="scan_qrcode">扫一扫上面的二维码，进行签到</string>
    <string name="all_select">全选</string>
    <string name="warning_situation">预警情况</string>
    <string name="warning">预警</string>
    <string name="warning_list">预警列表</string>
    <string name="issue_warning">下达预警</string>
    <string name="handle_situation_list">处理情况列表</string>
    <string name="handle_way">处理方式</string>
    <string name="flow_member_login">流动党员登录</string>
    <string name="issuer2">下达者：</string>
    <string name="recipient2">接收者：</string>
    <string name="secretary2">书记：</string>
    <string name="administrator2">管理员：</string>
    <string name="organization_archive">本组织归档</string>
</resources>
