<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.liu.eparty.activity.login.ResetPasswordActivity">

    <View
        android:id="@+id/view8"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/style_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintEnd_toEndOf="@+id/view8"
        app:layout_constraintStart_toStartOf="@+id/view8"
        app:layout_constraintTop_toTopOf="@+id/view8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/login_password2"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view8"
        app:layout_constraintTop_toTopOf="@+id/view8" />

    <EditText
        android:id="@+id/reset_password_login_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:hint="@string/input_password"
        app:layout_constraintBottom_toTopOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="@+id/view8"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/view8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/query_password2"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintStart_toStartOf="@+id/view8"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <EditText
        android:id="@+id/reset_password_query_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:hint="@string/input_query_password"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintEnd_toEndOf="@+id/view8"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <Button
        android:id="@+id/reset_password_query"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/query"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@drawable/style_button_solid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view8" />

</android.support.constraint.ConstraintLayout>
